--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               The cost is:
               <ul>
                 <li>R2.75 per call</li>
-                <li>R0.65 per sms</li>
+                <li>R0.75 per sms</li>
               </ul>
 
             </i>
@@ -168,6 +168,8 @@
             </div>
           </div>
         </div>
+
+        <!--Bill with setting-->
         <div class="six columns box">
           <h3>Bill with settings</h3>
           <div class="">
@@ -189,28 +191,28 @@
             <div class="six columns">
               <h5>Bill type</h5>
               <label class="">
-                <input type="radio" name="billItemTypeWithSettings" class="billItemTypeWithSettings">
+                <input type="radio" name="billItemTypeWithSettings" value = "call" class="billItemTypeWithSettings">
                 <span class="label-body">Call</span>
               </label>
               <label class="">
-                <input type="radio" name="billItemTypeWithSettings" class="billItemTypeWithSettings">
+                <input type="radio" name="billItemTypeWithSettings" value = "sms" class="billItemTypeWithSettings">
                 <span class="label-body" >SMS</span>
               </label>
-              <button class="button-primary" type="button" name="button">Add</button>
+              <button class="button-primary addBtn" type="button" name="button">Add</button>
 
               <h5>Totals</h5>
                   <table>
                     <tr>
                       <td>Call total</td>
-                      <td>R<span class="callTotalSettings">34.00</span> </td>
+                      <td>R<span class="callTotalSettings">0.00</span> </td>
                     </tr>
                     <tr>
                       <td>SMS total</td>
-                      <td>R<span class="smsTotalSettings">7.35</span> </td>
+                      <td>R<span class="smsTotalSettings">0.00</span> </td>
                     </tr>
                     <tr>
                       <td>Total</td>
-                      <td> R<span class="totalSettings">41.35</span> </td>
+                      <td> R<span class="totalSettings">0.00</span> </td>
                     </tr>
                   </table>
 
